--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
 	"engines": {
 		"node": ">=22"
 	},
-	"packageManager": "pnpm@10.28.1"
+	"packageManager": "pnpm@10.28.1",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"better-sqlite3",
+			"esbuild"
+		]
+	}
 }
