feat: implement hippo memory system
Core modules:
- schema.ts: SQLite tables (chunks, memory_blocks), WAL mode, indexes
- similarity.ts: cosine similarity, buffer↔Float32Array conversion
- strength.ts: decay resistance, effective strength, recency, scoring
- embed.ts: SHA-256 content hash, embedding delegation
- extractor.ts: LLM fact extraction + conflict classification
- ulid.ts: minimal ULID generator (no deps)
- db.ts: prepared statement cache
- types.ts: shared type definitions

Tools (8):
- remember_facts: extract → embed → conflict check → insert/replace/strengthen
- store_memory: embed → content-hash dedup → insert or strengthen
- recall_memories: semantic search, strength-weighted scoring
- recall_memory_block: read named block
- replace_memory_block: find/replace in named block
- append_memory_block: append to named block (upsert)
- forget_memory: semantic match → hard delete
- recall_conversation: FTS5 search over messages

Factory: createHippoTools(opts) → AgentTool[]

98 tests, all passing.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@mariozechner/pi-agent-core": "0.52.12",
 		"@mariozechner/pi-ai": "0.52.12",
+		"@sinclair/typebox": "^0.34.48",
 		"better-sqlite3": "^12.6.2"
 	},
 	"devDependencies": {
