--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		".": "./dist/index.js"
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/index.js"
+		}
 	},
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc -p tsconfig.build.json",
 		"check": "biome check .",
 		"format": "biome format --write .",
 		"lint": "biome lint .",
@@ -19,14 +22,19 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@mariozechner/pi-agent-core": "0.52.12",
-		"@mariozechner/pi-ai": "0.52.12",
-		"@sinclair/typebox": "^0.34.48",
-		"better-sqlite3": "^12.6.2"
+		"@sinclair/typebox": "^0.34.48"
+	},
+	"peerDependencies": {
+		"@mariozechner/pi-agent-core": ">=0.52.0",
+		"@mariozechner/pi-ai": ">=0.52.0",
+		"better-sqlite3": ">=12.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.14",
+		"@mariozechner/pi-agent-core": "0.52.12",
+		"@mariozechner/pi-ai": "0.52.12",
 		"@types/better-sqlite3": "^7.6.13",
+		"better-sqlite3": "^12.6.2",
 		"husky": "^9.1.7",
 		"typescript": "^5.9.3",
 		"vitest": "^4.0.18"
