feat(cli): add database inspection and management CLI
10 commands for inspecting and managing hippo databases without
embedding or LLM access:

  init     — initialize schema (idempotent)
  stats    — chunk counts, block counts, file size
  agents   — list all agent IDs
  chunks   — list facts/memories with filtering
  blocks   — list memory blocks
  block    — get block contents
  search   — case-insensitive text search
  delete   — hard delete chunks by ID
  purge    — remove superseded chunks
  export   — full agent data as JSON
  import   — restore from JSON export

Every data command supports --json for machine consumption.
Destructive commands (delete, purge) require --force.
Database path via --db flag or HIPPO_DB env var.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		}
 	},
 	"types": "./dist/index.d.ts",
+	"bin": {
+		"hippo": "./dist/cli.js"
+	},
 	"scripts": {
 		"build": "tsc -p tsconfig.build.json",
 		"check": "biome check .",
@@ -22,7 +25,8 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@sinclair/typebox": "^0.34.48"
+		"@sinclair/typebox": "^0.34.48",
+		"commander": "^14.0.3"
 	},
 	"peerDependencies": {
 		"@mariozechner/pi-agent-core": ">=0.52.0",
