--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	},
 	"types": "./dist/index.d.ts",
 	"bin": {
-		"hippo": "./dist/cli.js"
+		"hippo": "./dist/cli.js",
+		"hippo-server": "./dist/server/index.js"
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.build.json",
@@ -25,8 +26,11 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@modelcontextprotocol/sdk": "^1.27.0",
 		"@sinclair/typebox": "^0.34.48",
-		"commander": "^14.0.3"
+		"commander": "^14.0.3",
+		"express": "^5.2.1",
+		"zod": "^4.3.6"
 	},
 	"peerDependencies": {
 		"@mariozechner/pi-agent-core": ">=0.52.0",
@@ -38,6 +42,7 @@
 		"@mariozechner/pi-agent-core": "0.52.12",
 		"@mariozechner/pi-ai": "0.52.12",
 		"@types/better-sqlite3": "^7.6.13",
+		"@types/express": "^5.0.6",
 		"better-sqlite3": "^12.6.2",
 		"husky": "^9.1.7",
 		"typescript": "^5.9.3",
